k8s-deployment-masterclass/01-rolling-update/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: master-unified-ingress
  namespace: rolling
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: localhost
    http:
      paths:
      # 1. Rolling Update Strategy Path (Standard Deployment)
      - path: /rolling
        pathType: Prefix
        backend:
          service:
            name: rolling-app-service
            port:
              number: 80
